- added SCIPcreateVarImpl() and SCIPcreateObjVarImpl(), which behave identically to SCIPcreateVar() and SCIPcreateObjVar(), respectively, but have an additional argument for the new implied integral type flag (8th position)
- added SCIPchgVarImplType(), SCIPvarGetImplType(), SCIPvarIsImpliedIntegral() to control and query implied integrality
- added SCIPgetNBinImplVars(), SCIPgetNIntImplVars(), SCIPgetNContImplVars() to query the number of implied integral variables of every type; note that SCIPgetNBinVars(), SCIPgetNIntVars(), and SCIPgetNContVars() no longer include the implied integral variables in their counts
- added SCIPcolIsImpliedIntegral()
- added SCIPvarsCountTypes() to determine the variable type count distribution for an array of variables
- added SCIPeventGetOldImplType() and SCIPeventGetNewImplType() to query the new event SCIP_EVENTTYPE_IMPLTYPECHANGED
- added SCIPexprGetIntegrality(), which in addition to the existing function SCIPexprIsIntegral() provides information about the presence of weakly implied integral variables

### Changes in preprocessor macros

- removed `#define` of `strcasecmp` and `strncasecmp` (in case of Windows builds) in scip/def.h;
  use SCIPstr(n)casecmp() (scip/pub_misc.h) instead
- SCIPincludeConshdlrOrbitopePP(), SCIPcreateConsOrbitopePP(), SCIPcreateConsBasicOrbitopePP(), SCIPincludeConshdlrOrbitopeFull(), SCIPcreateConsOrbitopeFull(), SCIPcreateConsBasicOrbitopeFull()
- SCIP_VERSION_SUB and SCIP_SUBVERSION are deprecated
- removed SCIP_VARTYPE_IMPLINT_CHAR

### Command line interface

- help <command> now allows to display information on specific command.
- allow to hide certain commands in the help list
- add the (hidden) command "exit" to exit SCIP.
- Add iis option to create an infeasible subsystem
- Add write/iis option to write out the infeasible subsystem to file
- Add display/iis option to write out the infeasible subsystem to console

### Interfaces to external software

### Changed parameters
