@@ -252,8 +252,7 @@ SCIP_RETCODE selectVarMultAggrBranching(
          assert(fixvars[i] != NULL);
 
          /* only integer and binary multi-aggregated variables are potential branching candidates */
-         if( SCIPvarGetStatus(fixvars[i]) == SCIP_VARSTATUS_MULTAGGR && SCIPvarIsIntegral(fixvars[i])
-            && !SCIPvarIsImpliedIntegral(fixvars[i]) )
+         if( SCIPvarGetStatus(fixvars[i]) == SCIP_VARSTATUS_MULTAGGR && SCIPvarIsNonimpliedIntegral(fixvars[i]) )
          {
             fixvarssol = fixvarssols[i];
 
@@ -798,8 +797,7 @@ SCIP_DECL_BRANCHEXECLP(branchExeclpMultAggr)
          {
             for( i = 0; i < nfixvars; i++ )
             {
-               if( SCIPvarGetStatus(fixvars[i]) == SCIP_VARSTATUS_MULTAGGR && SCIPvarIsIntegral(fixvars[i])
-                  && !SCIPvarIsImpliedIntegral(fixvars[i]) )
+               if( SCIPvarGetStatus(fixvars[i]) == SCIP_VARSTATUS_MULTAGGR && SCIPvarIsNonimpliedIntegral(fixvars[i]) )
                {
                   branchruledata->nmultaggrvars += 1;
                }
