@@ -228,7 +228,7 @@ SCIP_RETCODE updateActivities(
    assert(maxactivities != NULL);
    assert(nviolrows != NULL);
    assert(0 <= *nviolrows && *nviolrows <= nlprows);
-   assert(SCIPvarIsIntegral(var) && !SCIPvarIsImpliedIntegral(var));
+   assert(SCIPvarIsNonimpliedIntegral(var));
 
    delta = newsolval - oldsolval;
    col = SCIPvarGetCol(var);
@@ -355,7 +355,7 @@ SCIP_RETCODE selectShifting(
       solval = SCIPgetSolVal(scip, sol, var);
 
       /* only accept integer variables */
-      if( !SCIPvarIsIntegral(var) || SCIPvarIsImpliedIntegral(var) )
+      if( !SCIPvarIsNonimpliedIntegral(var) )
          continue;
 
       isfrac = !SCIPisFeasIntegral(scip, solval);
@@ -473,7 +473,7 @@ SCIP_RETCODE selectEssentialRounding(
    for( v = 0; v < nlpcands; ++v )
    {
       var = lpcands[v];
-      assert(SCIPvarIsIntegral(var) && !SCIPvarIsImpliedIntegral(var));
+      assert(SCIPvarIsNonimpliedIntegral(var));
 
       solval = SCIPgetSolVal(scip, sol, var);
       if( !SCIPisFeasIntegral(scip, solval) )
@@ -824,7 +824,7 @@ SCIP_DECL_HEUREXEC(heurExecIntshifting) /*lint --e{715}*/
             SCIP_VAR* var;
 
             var = SCIPcolGetVar(cols[c]);
-            if( SCIPvarIsIntegral(var) && !SCIPvarIsImpliedIntegral(var) )
+            if( SCIPvarIsNonimpliedIntegral(var) )
             {
                SCIP_Real act;
 
@@ -983,7 +983,7 @@ SCIP_DECL_HEUREXEC(heurExecIntshifting) /*lint --e{715}*/
          break;
       }
 
-      assert(SCIPvarIsIntegral(shiftvar) && !SCIPvarIsImpliedIntegral(shiftvar));
+      assert(SCIPvarIsNonimpliedIntegral(shiftvar));
 
       SCIPdebugMsg(scip, "intshifting heuristic:  -> shift var <%s>[%g,%g], type=%d, oldval=%g, newval=%g, obj=%g\n",
          SCIPvarGetName(shiftvar), SCIPvarGetLbGlobal(shiftvar), SCIPvarGetUbGlobal(shiftvar), SCIPvarGetType(shiftvar),
