@@ -1919,7 +1919,7 @@ SCIP_DECL_HEUREXEC(heurExecNlpdiving)
          for( c = 0; c < ncovervars; c++ )
          {
             /* insert variable into hash map */
-            if( SCIPvarIsIntegral(covervars[c]) && !SCIPvarIsImpliedIntegral(covervars[c]) )
+            if( SCIPvarIsNonimpliedIntegral(covervars[c]) )
             {
                assert(!SCIPhashmapExists(varincover, covervars[c]));
                SCIP_CALL( SCIPhashmapInsertInt(varincover, covervars[c], c+1) );
@@ -2284,7 +2284,7 @@ SCIP_DECL_HEUREXEC(heurExecNlpdiving)
                      nlpsolval = SCIPvarGetNLPSol(covervars[c]);
                      nlpsolval = MIN(nlpsolval,ub);
                      nlpsolval = MAX(nlpsolval,lb);
-                     assert(!SCIPvarIsIntegral(covervars[c]) || SCIPvarIsImpliedIntegral(covervars[c]) || SCIPisFeasIntegral(scip, nlpsolval));
+                     assert(!SCIPvarIsNonimpliedIntegral(covervars[c]) || SCIPisFeasIntegral(scip, nlpsolval));
 
                      /* open a new probing node if this will not exceed the maximal tree depth,
                       * otherwise fix all the remaining variables at the same probing node
