@@ -335,7 +335,7 @@ SCIP_RETCODE selectShifting(
       assert(!SCIPisZero(scip, val));
       solval = SCIPgetSolVal(scip, sol, var);
 
-      isinteger = (SCIPvarIsIntegral(var) && !SCIPvarIsImpliedIntegral(var));
+      isinteger = SCIPvarIsNonimpliedIntegral(var);
       isfrac = (isinteger && !SCIPisFeasIntegral(scip, solval));
       increase = (direction * val > 0.0);
 
@@ -457,7 +457,7 @@ SCIP_RETCODE selectEssentialRounding(
    for( v = 0; v < nlpcands; ++v )
    {
       var = lpcands[v];
-      assert(SCIPvarIsIntegral(var) && !SCIPvarIsImpliedIntegral(var));
+      assert(SCIPvarIsNonimpliedIntegral(var));
 
       solval = SCIPgetSolVal(scip, sol, var);
       if( !SCIPisFeasIntegral(scip, solval) )
@@ -908,7 +908,7 @@ SCIP_DECL_HEUREXEC(heurExecShifting) /*lint --e{715}*/
       /* update fractionality counter and minimal objective value possible after shifting remaining variables */
       oldsolvalisfrac = (!SCIPisFeasIntegral(scip, oldsolval) && SCIPvarIsIntegral(shiftvar) && !SCIPvarIsImpliedIntegral(shiftvar));
       obj = SCIPvarGetObj(shiftvar);
-      if( SCIPvarIsIntegral(shiftvar) && !SCIPvarIsImpliedIntegral(shiftvar) && oldsolvalisfrac )
+      if( SCIPvarIsNonimpliedIntegral(shiftvar) && oldsolvalisfrac )
       {
          assert(SCIPisFeasIntegral(scip, newsolval));
          nfrac--;
