@@ -1560,7 +1560,7 @@ SCIP_DECL_PRESOLEXEC(presolExecTworowbnd)
 
       var = SCIPmatrixGetVar(matrix, i);
 
-      assert(!SCIPvarIsIntegral(var) || SCIPvarIsImpliedIntegral(var)
+      assert(!SCIPvarIsNonimpliedIntegral(var)
             || (SCIPisEQ(scip, newlbs[i], SCIPceil(scip, newlbs[i])) && SCIPisEQ(scip, newubs[i], SCIPfloor(scip, newubs[i]))));
 
       if( SCIPisEQ(scip, newlbs[i], newubs[i]) )
